<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".screens.settings.SettingsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/purple_200"
                app:title="@string/settings"
                app:titleTextColor="@color/black" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/personal_data"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:padding="20dp"
            android:text="@string/personal_data"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:icon="@drawable/ic_person"
            app:iconPadding="22dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/notification_options"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="20dp"
            android:text="@string/notification_options"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:icon="@drawable/ic_notifications"
            app:iconPadding="22dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personal_data" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/themes"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="20dp"
            android:text="@string/themes"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:icon="@drawable/ic_settings_applications"
            app:iconPadding="22dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification_options" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="20dp"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:icon="@drawable/ic_exit_to_app"
            app:iconPadding="22dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/themes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
